--- a/Try1/app/src/main/AndroidManifest.xml
+++ b/Try1/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DashboardMain"></activity>
+        <activity android:name=".Tuition"></activity>
+        <activity android:name=".Classes" />
+        <activity android:name=".Resources" />
+        <activity android:name=".Program" />
+        <activity android:name=".DashboardMain" />
         <activity android:name=".Dashboard" />
         <activity
             android:name=".DisplayMessageActivity"
